# Routor

./: .gitignore  README.md  build.gradle.kts  docker-compose.yaml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/routor/: MainActivity.kt
app/src/main/java/routor/: RoutorApp.kt
app/src/main/java/routor/src/di/: DatabaseModule.kt  DialogFactoryModule.kt  LocationModule.kt
app/src/main/java/routor/src/location/: DefaultLocationClient.kt  LocationHelper.kt  LocationService.kt  LocationStats.kt
app/src/main/java/routor/src/utils/: FormatTime.kt  LocationHelper.kt  MapHelper.kt
app/src/main/res/values/: strings.xml  themes.xml
backend/: .gitignore  Dockerfile  cloudflared_command.md  docker-compose.network.yaml  docker-compose.yaml  main.py  pyproject.toml
backend/database/: backup.sh  docker-compose.db.yaml  init-db.sh  schema.sql
backend/src/: app.py  firebase_notification.py
backend/src/database/: database.py
backend/src/generate_routes/: docker-compose.worker.yaml  task.py  worker_app.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mobile_app/: .gitignore  build.gradle.kts
mobile_app/app/: build.gradle.kts  google-services.json
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/routor/: ContextExt.kt  MainActivity.kt  RoutorApp.kt
mobile_app/app/src/main/res/drawable/: route_begin_dot.xml  route_end_dot.xml  user_location_dot.xml
mobile_app/app/src/main/res/values/: ids.xml
mobile_app/gradle/: libs.versions.toml
(+71 files in other folders)
