[project]
name = "routor_backend"
version = "0.1.0"
description = "Backend for route recommendation mobile application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
show-fixes = true
src = ["src"]


[tool.ruff.lint]
extend-select = ["I", "E", "W", "F", "C90", "B", "S", "UP", "PL"]
